mandatory part fixed

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -1,10 +1,13 @@
 NAME = philo
 
-CC = cc -pthread -fsanitize=thread
+CC = cc -pthread 
+# -fsanitize=thread
 
 CFLAGS = -Wall -Werror -Wextra
 
 SRC = main.c\
+	stat_philo.c\
+	init_philo.c\
 	utils.c\
 	ft_atoi.c\
 	ft_calloc.c\
